# api-rust

./: .gitignore  Cargo.toml  commands.txt  dockerfile  readme.md  test.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: devskim.yml  rust-clippy.yml
prisma/: schema.prisma  schema_production.prisma
prisma/migrations/20231014210503_v4_new_model/: migration.sql
prisma/migrations/20231104053609_score/: migration.sql
prisma/migrations/20231206022345_new_user_schema/: migration.sql
prisma/migrations/20231206023701_user_updatea/: migration.sql
prisma/migrations/20231216135606_new_user_schema/: migration.sql
prisma/migrations/20231220064247_better_users/: migration.sql
src/: app.rs  auth.rs  auth_guard.rs  auth_new.rs  base_types.rs  docs.rs  email_service.rs  lib.rs  main.rs  prisma.rs  socket.rs  storage_bucket_service.rs  upload_service.rs  utils.rs
src/database/: users_db.rs
src/entities/: hackathons.rs  mod.rs  roles.rs
src/routes/: events.rs  extra_credit_assignments.rs  extra_credit_classes.rs  hackathons.rs  locations.rs  mod.rs  organizers.rs  scans.rs  sponsors.rs  user_routes.rs  users.rs
tests/: base_types_tests.rs  utils_tests.rs
