[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.9.0"
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
chrono = "0.4"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4", features = ["chrono", "debug", "uuid"] }
utoipa-redoc = { version = "1", features = ["axum"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4.4", features = ["trace"] }
serde_json = "1.0.108"
axum_typed_multipart = "0.10.1"
