[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
hyper = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.10.0"
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
chrono = "0.4"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.1.0", features = ["chrono", "debug", "uuid"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.10.2"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["trace"] }
serde_json = "1.0.108"
axum_typed_multipart = "0.10.2"
anyhow = "1.0.75"
thiserror = "1.0.50"
async-trait = "0.1.74"
