[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
# Web Frameworks and Extensions
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
axum-valid = { version = "0.12.0-alpha", features = ["full_validator"] }
axum_typed_multipart = "0.10.2"
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
socketioxide = "0.9.1"

# Asynchronous Programming
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }

# HTTP and Web Clients
hyper = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

# Database and ORM
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }

# Data Validation
validator = { version = "0.16", features = ["derive"] }

# API Documentation
utoipa = { version = "4.1.0", features = ["chrono", "debug", "uuid"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }

# Utilities
anyhow = "1.0.75"
chrono = "0.4"
lazy_static = "1.4.0"
regex = "1.10.2"
thiserror = "1.0.50"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
url = "2.5.0"

# Development Tools
cargo-update = "13.3.0"

# Email
sendgrid = {version = "0.19.2", features = ["async"]}
mrml = "3.0.0"
handlebars = "4.5.0"

openssl = { version = "0.10", features = ["vendored"] }

